update logo and nes features

--- a/popup.html
+++ b/popup.html
@@ -95,7 +95,7 @@
     </style>
   </head>
   <body>
-    <h1>Video Speed Hold</h1>
+    <h1>Video Speed Settings</h1>
 
     <div class="field">
       <label>Hold key</label>
