--- a/popup.html
+++ b/popup.html
@@ -149,6 +149,7 @@
     <button id="resetNowBtn" type="button">Reset active video to 1x</button>
     <div id="status"></div>
 
+    <script src="constants.js"></script>
     <script src="popup.js"></script>
   </body>
 </html>
