--- a/popup.html
+++ b/popup.html
@@ -131,7 +131,7 @@
     </div>
 
     <div class="field">
-      <label>Reset speed key (to 1x)</label>
+      <label>Toggle speed key (1x / last)</label>
       <div class="row">
         <input id="resetKeyDisplay" type="text" readonly />
         <button id="captureResetBtn" type="button">Set key</button>
@@ -146,7 +146,7 @@
     </div>
 
     <button id="saveBtn" type="button">Save settings</button>
-    <button id="resetNowBtn" type="button">Reset active video to 1x</button>
+    <button id="resetNowBtn" type="button">Toggle active video 1x/last speed</button>
     <div id="status"></div>
 
     <script src="constants.js"></script>
