--- a/popup.html
+++ b/popup.html
@@ -74,7 +74,7 @@
         margin-top: 8px;
       }
 
-      #resetNowBtn {
+      #resetDefaultsBtn {
         width: 100%;
         background: #334155;
         color: #fff;
@@ -107,7 +107,7 @@
     </div>
 
     <div class="field">
-      <label for="speedInput">Boost speed</label>
+      <label for="boostSpeedInput">Boost speed</label>
       <input id="boostSpeedInput" type="number" min="0.1" max="16" step="0.1" />
       <div class="hint">Used while the key is held.</div>
     </div>
@@ -140,13 +140,37 @@
     </div>
 
     <div class="field">
+      <label>Seek back key</label>
+      <div class="row">
+        <input id="seekBackKeyDisplay" type="text" readonly />
+        <button id="captureSeekBackBtn" type="button">Set key</button>
+      </div>
+      <div class="hint">Jumps backward by seek step seconds.</div>
+    </div>
+
+    <div class="field">
+      <label>Seek forward key</label>
+      <div class="row">
+        <input id="seekForwardKeyDisplay" type="text" readonly />
+        <button id="captureSeekForwardBtn" type="button">Set key</button>
+      </div>
+      <div class="hint">Jumps forward by seek step seconds.</div>
+    </div>
+
+    <div class="field">
       <label for="stepInput">Increase/decrease step</label>
       <input id="stepInput" type="number" min="0.1" max="4" step="0.1" />
       <div class="hint">How much speed changes per key press.</div>
     </div>
 
+    <div class="field">
+      <label for="seekStepInput">Seek step (seconds)</label>
+      <input id="seekStepInput" type="number" min="1" max="120" step="1" />
+      <div class="hint">Used by seek back/forward keys.</div>
+    </div>
+
     <button id="saveBtn" type="button">Save settings</button>
-    <button id="resetNowBtn" type="button">Toggle active video 1x/last speed</button>
+    <button id="resetDefaultsBtn" type="button">Reset to default settings</button>
     <div id="status"></div>
 
     <script src="constants.js"></script>
